2013-11-08 Jussi Ohenoja <juice@swagman.org>
	* Corrected a bug in pack_cpio.sh script: the archive was not created with root-owned files, which led to problems when trying to ssh/sftp to the device as unpacking the cpio changed root ownership to 1000:1000 instead of 0:0.
	* Updated config interface version to 4.
	* First take on the automatic kernel listing based on a given directory.

2013-11-07 Jussi Ohenoja <juice@swagman.org>
	* Fixed a small bug in select_os_animated.sh script. The on-the-fly mapfile creation made an extra hook for the non-existing 6th line when there are 5 items in the menu. Props for peterleinchen for spotting this :)

2013-11-06 Jussi Ohenoja <juice@swagman.org>
	* Added configuration key for DSME & BME startup.

2013-10-29 Jussi Ohenoja <juice@swagman.org>
	* New version 0.3.5 released.
	* Corrected typos in the template ubiboot.conf, Thanks go to @eekkelund for spotting the typo.

2013-10-25 Jussi Ohenoja <juice@swagman.org>
	* Changed the rootfs seed build location.
	* Added the kernel patch to repository.

2013-10-24 Jussi Ohenoja <juice@swagman.org>
	* Updated the README document. Considerable rewrite to make it a bit more coherent.
	* Added storing the svn version tag of the rootfs build to a file.
	* Added logging of rootfs build tag to init.

2013-10-22 Jussi Ohenoja <juice@swagman.org>
	* Added README to docs.
	* Added GPL to docs.

2013-10-21 Jussi Ohenoja <juice@swagman.org>
	* Added TI calibrator and netlink socket libraries to go.

2013-10-18 Jussi Ohenoja <juice@swagman.org>
	* Added iwconfig and libiw.so
	* Patched arch/arm/kernel/vmlinux.lds.S to link the initramfs to the end of the kernel image. The size of the FS has grown largr than 16M which caused problems for module linking, see for ex. https://lkml.org/lkml/2011/1/11/259 for info.
	* Added wlan modules and firmware file to build.
	* Added logging of console-output messages in init.

2013-10-17 Jussi Ohenoja <juice@swagman.org>
	* Added wpa_supplicant to binaries.
